<resources>
    <string name="app_name">MobileNoteProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_newNote_mainPage">New Note</string>
    <string name="title_activity_create_new_text_note">CreateNewTextNote</string>
    <string name="editTxt_NewTExtNoteHint_NewTextNotePage">Enter new note text here</string>
    <string name="btn_SubmitNoteText_CreatNewTextNotePage">Submit</string>
    <string name="btn_CancelNewNote_CreatNewTextNotePage">Cancel</string>
    <string name="addPicture">Add Pic</string>
    <string name="title_activity_attach_popup">AttachPopup</string>
    <string name="editTextHint_enterTime">Enter time</string>
    <string name="editTextHint_enterDate">Enter date</string>
    <string name="editTxt_noteTitle">Enter note title</string>
    <string name="editTextHint_password">Enter Password</string>
    <string name="editTextHint_studentID">Enter Student ID</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_audio_lectures">AudioLectures</string>
    <string name="lecturesTitle">Lectures</string>
    <string name="lectureName">Lecture1</string>
    <string name="menuItem_audioLectures">Audio Lectures</string>
    <string name="title_activity_note_prompt">Note Prompt</string>
    <string name="title_activity_show_classes">ShowClasses</string>
    <string name="lbl_classesTitle">Classes</string>
    <string name="lbl_defaultcourseName">Course 1</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_setbackgroud">Set Background</string>
    <string name="lbl_noteTitle">Note Title</string>
    <string name="lbl_noteDescrption">Note Description</string>
    <string name="btn_viewContent">View Content</string>
    <string name="btn_showAudioLectures">Show Audio Lectures</string>
    <string name="audio">Show Audio Lectures Test</string>
</resources>
