<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="csci4100.uoit.ca.mobilenoteproject.CreateNewTextNote">

    <EditText
        android:id="@+id/EditText_description"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/editTxt_NewTExtNoteHint_NewTextNotePage"
        android:layout_below="@+id/EditText_time"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/lblAttach" />

    <EditText
        android:id="@+id/EditText_enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxt_noteName"/>

    <TextView
        android:id="@+id/lblAttach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attach:"
        android:layout_above="@+id/openpopup"
        android:layout_alignStart="@+id/openpopup" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:clickable="true"
        android:onClick="showTimePickerDialog"
        android:hint="@string/editTextHint_enterTime"
        android:id="@+id/EditText_time"
        android:layout_alignTop="@+id/EditText_date"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/lblAttach" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:inputType="date"
        android:hint="@string/editTextHint_enterDate"
        android:onClick="showDatePickerDialog"
        android:ems="10"
        android:id="@+id/EditText_date"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:layout_toEndOf="@+id/lblAttach" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="40dp"
        android:maxWidth="50dp"
        android:scaleType="fitXY"
        android:layout_marginRight="5dp"
        android:layout_gravity="right"
        android:src="@drawable/attachicon"
        android:id="@+id/openpopup"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_SubmitNoteText_CreatNewTextNotePage"
        android:onClick="submitNote"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_CancelNewNote_CreatNewTextNotePage"
        android:onClick="cancelNewNote"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button2" />

</RelativeLayout>